--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
     "description": "a website for GUI pizza",
     "main": "App.js",
     "scripts": {
-      "start": "react-scripts start",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "react-scripts start",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "react-bootstrap": "^2.7.2",
-      "react-dom": "^18.2.0",
-      "react-scripts": "^5.0.1",
-      "react-tabs": "^6.0.0"
+        "@material-ui/core": "^4.12.4",
+        "react-bootstrap": "^2.7.2",
+        "react-dom": "^18.2.0",
+        "react-scripts": "^5.0.1",
+        "react-tabs": "^6.0.0"
     },
     "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
-  }
-  
+}
