--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "App.js",
     "scripts": {
         "start": "react-scripts start",
+        "build": "react-scripts build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
