--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@material-ui/core": "^4.12.4",
         "@mui/material": "^5.12.1",
+        "@react-google-maps/api": "^2.18.1",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
         "react-scripts": "^5.0.1",
