--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "@material-ui/core": "^4.12.4",
         "@mui/material": "^5.12.1",
         "@react-google-maps/api": "^2.18.1",
+        "@react-oauth/google": "^0.11.0",
+        "install": "^0.13.0",
+        "npm": "^9.6.5",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
         "react-scripts": "^5.0.1",
