--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@emotion/styled": "^11.10.8",
         "@material-ui/core": "^4.12.4",
         "@mui/material": "^5.12.1",
         "@react-google-maps/api": "^2.18.1",
