--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@emotion/react": "^11.10.8",
+        "@emotion/styled": "^11.10.8",
         "@material-ui/core": "^4.12.4",
-        "@mui/material": "^5.12.1",
+        "@mui/material": "^5.12.2",
         "@react-google-maps/api": "^2.18.1",
         "@react-oauth/google": "^0.11.0",
         "install": "^0.13.0",
